--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <textarea form="form" id="review">Leave your review here...</textarea>
       <button type="submit" name="action">Submit</button>
     </form>
+    <button id="showReviews">Show Reviews</button>
+    <div id="reviews"></div>
     <script src="script.js"></script>
   </body>
 </html>
